# reuseit

./: .dockerignore  .env  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  GoogleService-Info.plist  PROJECT_STATUS.md  README.md  agents.md  app-env.d.ts  app.config.js  app.json  cesconfig.json  codegen.ts  credentials.json  docker-compose.yml  eas.json  eslint.config.cjs  eslint.shared.js  expo-dev-client.json  google-services.json  metro.config.js  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pull-models.sh  schema.gql  tailwind.config.js  tsconfig.json
apps/ml-training/: .gitignore  README.md  auto_label.py  config.py  convert_to_tfjs.py  dataset_utils.py  export_tflite.py  generate_random_test_images.py  labels.json  prepare_datasets.sh  pyproject.toml  requirements.txt  test_and_visualize.py  train.py  visualize_csv_bboxes.py
apps/ml-training/classifier/: train.py  validate_tflite.py
apps/ml-training/notebooks/: COLAB_SETUP.md  KAGGLE_SETUP.md  README.md  colab_notebook.ipynb  colab_train.py  kaggle_notebook.ipynb  kaggle_train.py
apps/ml-training/object_detection/: README.md  config.py  export_tflite.py  quickstart.sh  requirements.txt  setup.sh  test_visualize.py  train_detector.py  verify.py
apps/ml-training/yolo/: Code Citations.md  README.md  auto_label_yolo.py  data.yaml  dataset_utils_yolo.py  export_to_tflite.py  test_tflite_camera.py  test_yolo_inference.py  train_yolo_detector.py  visualize_yolo_labels.py
apps/ml-training/yolo_training/: Code Citations.md  auto_label_yolo.py  data.yaml  export_to_tflite.py  (+4 more)
(+493 files in other folders)
